prod_snapshot_2015-09-24_1030/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Acquisition</fullName>
        <description>New Customer Acquisition Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Approved by Jumpstart</fullName>
        </values>
        <values>
            <fullName>Contract Sent to Customer</fullName>
        </values>
        <values>
            <fullName>Contract Signed by Customer</fullName>
        </values>
        <values>
            <fullName>Customer Discovery</fullName>
        </values>
        <values>
            <fullName>Playbook %2F Recommend Solution</fullName>
        </values>
        <values>
            <fullName>Proposal Sent %2F Delivered</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Deal Chicken</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Appr %26 Sign</fullName>
        </values>
        <values>
            <fullName>Closed - Ran</fullName>
        </values>
        <values>
            <fullName>Closed - Signed</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Customer Discovery</fullName>
        </values>
        <values>
            <fullName>DC Approved</fullName>
        </values>
        <values>
            <fullName>DC Canceled</fullName>
        </values>
        <values>
            <fullName>DC Out For Sign</fullName>
        </values>
        <values>
            <fullName>DC Rejected</fullName>
        </values>
        <values>
            <fullName>DC Signed</fullName>
        </values>
        <values>
            <fullName>DC Submitted</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Extension</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Customer Discovery</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SML Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Approved</fullName>
        </values>
        <values>
            <fullName>Customer Discovery</fullName>
        </values>
        <values>
            <fullName>Demo AD</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Simply Gifted</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Customer Discovery</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>SG Approved</fullName>
        </values>
        <values>
            <fullName>SG Approved %26 Signed</fullName>
        </values>
        <values>
            <fullName>SG Out for Signature</fullName>
        </values>
        <values>
            <fullName>SG Rejected</fullName>
        </values>
        <values>
            <fullName>SG Sent</fullName>
        </values>
        <values>
            <fullName>SG Setup</fullName>
        </values>
        <values>
            <fullName>SG Signed</fullName>
        </values>
        <values>
            <fullName>SG Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>USCP Opportunity Process</fullName>
        <description>USCP Opportunity Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Approved</fullName>
        </values>
        <values>
            <fullName>Contract Sent</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Fax__c</fullName>
        <formula>Account.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Standing__c</fullName>
        <label>Account Standing</label>
        <picklist>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled-Never Started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the person handling Order Fulfillment from the Ad Ops Team</description>
        <inlineHelpText>This is the person handling Order Fulfillment from the Ad Ops Team</inlineHelpText>
        <label>Ad Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliated_Sale_Type__c</fullName>
        <inlineHelpText>No Audit: No Audit Requested
Different Products: Client purchased products that were not recommended
Exact To Audit: Client purchased exact audit recommendation
Lowered Budget: Client purchased products that were recommended but with a lower budget.</inlineHelpText>
        <label>Affiliated Sale Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Audit Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exact To Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowered Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AfflRep_FirstName__c</fullName>
        <label>AfflRep FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Org__c</fullName>
        <formula>Sales_Rep__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affl Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_Email__c</fullName>
        <formula>Sales_Rep__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affl Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Type_Notes__c</fullName>
        <label>Affl Sales Type - Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 - 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 - 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65+</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Alt_Phone_Number__c</fullName>
        <formula>Account.Alt_Direct_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt/Direct Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Setter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment Setter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Talk_Time__c</fullName>
        <formula>IF( Connected_Count__c &gt;0,Total_Talk_Time__c / Connected_Count__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Transaction_Value__c</fullName>
        <label>Average Transaction Value</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Call__c</fullName>
        <label>Best Time To Call</label>
        <picklist>
            <picklistValues>
                <fullName>Early morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <description>Account Billing Address (read only)</description>
        <formula>Account.BillingStreet &amp; &quot; &quot; &amp; BR() &amp;
Account.BillingCity &amp;&quot;, &quot;&amp;Account.BillingState &amp; &quot; &quot; &amp;  Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Market__c</fullName>
        <description>IF( Sales_Rep__r.AccountId = &quot;001F000000gfrcZ&quot;,&quot;Phoenix - REP&quot;, 
IF( OR(RecordTypeId = &quot;012F0000000y9Wm&quot;, Print_Products_Notice__c  = True), TEXT(Market_Record__c) , IF( RecordTypeId = &quot;012F0000000y9rk&quot;, &quot;DealChicken&quot;,IF(NOT(ISNULL(Sales_Rep__c)) , Sales_Rep__r.Account.Name, &quot;Phoenix - GL&quot;)))

)</description>
        <formula>IF( Sales_Rep__r.AccountId = &quot;001F000000gfrcZ&quot;,&quot;Phoenix - REP&quot;, 
IF( OR(RecordTypeId = &quot;012F0000000y9Wm&quot;, Print_Products_Notice__c  = True), TEXT(Market_Record__c) , IF( RecordTypeId = &quot;012F0000000y9rk&quot;, &quot;DealChicken&quot;,IF(NOT(ISNULL(Sales_Rep__c)) , Sales_Rep__r.Account.Name, &quot;Phoenix - GL&quot;)))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Market Responsible For Billing Procedures.</inlineHelpText>
        <label>Billing Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Range__c</fullName>
        <label>Budget Range</label>
        <picklist>
            <picklistValues>
                <fullName>$500-$1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000-$2,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000-$4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bus_Days_10__c</fullName>
        <formula>IF(
MOD((CloseDate) - DATE(2000,1,7),7)=0,CloseDate+17,
IF(MOD((CloseDate) - DATE(2000,1,8),7)=0,CloseDate+16,
CloseDate+15
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Days 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bus_Days_3__c</fullName>
        <formula>IF(
MOD((CloseDate) - DATE(2000,1,4),7)=0,CloseDate+6,
IF(MOD((CloseDate) - DATE(2000,1,5),7)=0,CloseDate+6,
IF(MOD((CloseDate) - DATE(2000,1,6),7)=0,CloseDate+6,
IF(MOD((CloseDate) - DATE(2000,1,7),7)=0,CloseDate+6,
IF(MOD((CloseDate) - DATE(2000,1,8),7)=0,CloseDate+5,
IF(MOD((CloseDate) - DATE(2000,1,9),7)=0,CloseDate+4,
CloseDate+4
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Days 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Legal_Name_1__c</fullName>
        <inlineHelpText>REQUIRED TO SUBMIT !! This records the last Company Legal Name (either from the W8 or W9) on the last proposal sent to a customer and filled out by them.</inlineHelpText>
        <label>**Business Legal Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Legal_Name_2__c</fullName>
        <inlineHelpText>REQUIRED TO SUBMIT !! This records the last Business Name (from either the Direct Deposit or Check Request Options) on the last proposal sent to a customer and filled out by them.</inlineHelpText>
        <label>**Business Legal Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Count__c</fullName>
        <label>Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Association__c</fullName>
        <label>Campaign Association</label>
        <picklist>
            <picklistValues>
                <fullName>Direct_Mail_01/11/10</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Length_Rounded__c</fullName>
        <formula>ROUND (Campaign_Length__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Length Rounded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Length__c</fullName>
        <description>End date - start date divided by 30</description>
        <formula>(Max_End_Date__c  -  Earliest_Start_Date__c) / 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <label>Campaign Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled Needs Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performed Needs Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive : Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Auto Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Car Wash &amp; Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Motorcycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Mufflers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Oil Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Parts &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Recreational Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Tires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive : Transmissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Adult Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Amusement Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Children&apos;s Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Concerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Family Fun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Movie Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Specialty Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Sporting Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment : Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health : Acupuncture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health : Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health : Cosmetic Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health : Day Spa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health : Esthetician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health : Hair Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health : Hair Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>meant to allow for a custom default close date on lead conversion to opportunity - mapped through from lead.</description>
        <label>Close Date Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Day_Code__c</fullName>
        <formula>TODAY() - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Day Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Month_Code__c</fullName>
        <formula>IF(YEAR(TODAY()) = YEAR( CloseDate ), 
MONTH(TODAY()) - MONTH( CloseDate),
(MONTH(TODAY()) - MONTH( CloseDate)) + (12 * (YEAR(TODAY()) - YEAR(CloseDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Month_Of_Year__c</fullName>
        <formula>MONTH(CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month Of Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Time_Stamp__c</fullName>
        <label>Closed Won Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Code_Close_Week_Of__c</fullName>
        <formula>CloseDate+ CASE(MOD(CloseDate- DATE(1900, 1, 7), 7), 
0, 1, 
1, 0, 
2, -1, 
3, -2, 
4, -3, 
5, -4, 
6, -5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Close Week Of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Close_Week__c</fullName>
        <formula>(( 
(TODAY() + CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 
0, 6, 
1, 5, 
2, 4, 
3, 3, 
4, 2, 
5, 1, 
6, 0, 0)) 


- (CloseDate + CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 
0, 6, 
1, 5, 
2, 4, 
3, 3, 
4, 2, 
5, 1, 
6, 0, 0)) 
)/7)*(-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Close Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Period__c</fullName>
        <formula>GL_Calender__r.Code_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Run_Next_Week__c</fullName>
        <formula>IF(AND(Code_Run_Week__c =1,IsWon=True),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Run Next Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Run_This_Week__c</fullName>
        <formula>IF(AND(Code_Run_Week__c&lt;1,IsWon),1,0)</formula>
        <label>Code Run This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Run_Week__c</fullName>
        <formula>ROUND((( 
(TODAY() + CASE(MOD(TODAY() - DATE(1900, 1, 8), 7), 
0, 6, 
1, 5, 
2, 4, 
3, 3, 
4, 2, 
5, 1, 
6, 0, 0)) 


- ( DC_Run_Date__c + CASE(MOD(TODAY() - DATE(1900, 1, 8), 7), 
0, 0, 
1, 6, 
2, 5, 
3, 4, 
4, 3, 
5, 2, 
6, 1, 0)) 
)/7)*(-1),0)</formula>
        <label>Code Run Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Calc__c</fullName>
        <formula>IF(Amount &gt; 0,

IF(

IF( ISPICKVAL(Market_Record__c, &quot;Phoenix&quot;),

IF(Amount &lt;= 10000,

DC_Split_Perc__c*0.05 * Amount,

(DC_Split_Perc__c *0.05 * 10000) + (Amount - 10000) * 0.1 * DC_Split_Perc__c),

DC_Split_Perc__c*0.06 * Amount) &lt; 50 , 50 , IF( ISPICKVAL(Market_Record__c, &quot;Phoenix&quot;),

IF(Amount &lt;= 10000,

DC_Split_Perc__c*0.05 * Amount,

(DC_Split_Perc__c *0.05 * 10000) + (Amount - 10000) * 0.1 * DC_Split_Perc__c),

DC_Split_Perc__c*0.06 * Amount)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perochial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_sfid__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company sfid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>FindLaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexis Nexis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scorpion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conf_Number__c</fullName>
        <label>Conf Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Connected_Count__c</fullName>
        <label>Connected Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <inlineHelpText>Used for Local Information &amp; Deal ZipCode</inlineHelpText>
        <label>Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking, I confirm that I have a SIGNED CONTRACT attached to this opportunity.</inlineHelpText>
        <label>DC Contract Is Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_EndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_StartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CountOfTracking__c</fullName>
        <label>CountOfTracking</label>
        <summaryFilterItems>
            <field>Opp_Tracking_Report__c.Event__c</field>
            <operation>equals</operation>
            <value>Submitted, Sent, Signed, Approved, Approved &amp; Signed, Created</value>
        </summaryFilterItems>
        <summaryForeignKey>Opp_Tracking_Report__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Of_Products__c</fullName>
        <label>Count Of Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Waiting_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Waiting_Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Won__c</fullName>
        <formula>IF( IsWon = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_OLI__c</fullName>
        <description>count of opportunity Line Items of the corresponding opportunity</description>
        <label>Count of OLI</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Market_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Market AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1Yc1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAMAssigned__c</fullName>
        <label>DigAM Assigned</label>
        <type>DateTime</type>
    </fields>
</CustomObject>